# dungeondraft-mcp

./: .gitignore  CLAUDE.md  LICENSE  PROTOCOL.md  README.md
mod/dungeondraft-mcp-bridge/: mcp_bridge.ddmod
mod/dungeondraft-mcp-bridge/scripts/tools/: mcp_bridge.gd
server/: demo_build.py  pyproject.toml  test_bridge.py
server/dungeondraft_mcp/: __init__.py  bridge_client.py  server.py
