[project]
name = "dungeondraft-mcp"
version = "0.1.0"
description = "MCP server bridging an LLM to a running Dungeondraft instance via its modding API"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["mcp>=1.2.0"]

[project.scripts]
dungeondraft-mcp = "dungeondraft_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dungeondraft_mcp"]
